versão beta
sem histórico e com problemas nomeadamente em como é exibido o gráfico